feat: Решение задачи Pause Full